Team History Added

--- a/timetracker/templates/history.html
+++ b/timetracker/templates/history.html
@@ -8,7 +8,7 @@
 
 <h1>Time Sheet History</h1>
 <br>
-<a href="{% url 'timetracker:profile' %}" class = "btn btn-default btn-sm">{% trans "Leave Time Entry System" %}</a>
+<a href="{% url 'timetracker:profile' %}" class = "btn btn-default btn-sm">{% trans "Leave Time History Page" %}</a>
 
 <h4>Choose Project:</h4>
 <form action="{% url 'timetracker:history' %}" method="post">
