--- a/timetracker/templates/profile.html
+++ b/timetracker/templates/profile.html
@@ -10,6 +10,7 @@
 	<br>
 <a href="{% url 'timetracker:history' %}" class = "btn btn-success">{% trans "Time History" %}</a>
 <a href="{% url 'timetracker:timeEntry' %}" class = "btn btn-success">{% trans "Enter Time" %}</a>
+<a href="{% url 'timetracker:teamHistory' %}" class = "btn btn-success">{% trans "Team History" %}</a>
 </div>
 
 {% endblock %}
