User-Employee Connection Added

--- a/registration/templates/registration/registration_form.html
+++ b/registration/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
 <form class="form-inline" method="post" action="">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="{% trans 'Submit' %}" />
+    <input type="submit" class="btn btn-success" value="{% trans 'Submit' %}" />
 </form>
 </div>
 {% endblock %}
