--- a/registration/templates/registration/logout.html
+++ b/registration/templates/registration/logout.html
@@ -1,8 +1,8 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
-
 {% block title %}{% trans "Logged out" %}{% endblock %}
-
 {% block content %}
+<div class="col-md-4 col-md-offset-4">
 <p>{% trans "Successfully logged out" %}.</p>
+</div>
 {% endblock %}
