--- a/timetracker/templates/teamHistory.html
+++ b/timetracker/templates/teamHistory.html
@@ -6,9 +6,8 @@
 <div class="col-md-6 col-md-offset-3">
 
 <h1>Team Work History</h1>
-<br>
 <a href="{% url 'timetracker:profile' %}" class = "btn btn-default btn-sm">{% trans "Leave Time History Page" %}</a>
-<br>
+<br><br>
 <div class="col-md-8">
 <h5>Individual Work Hours</h5>
 <table class="table table-hover">
@@ -33,8 +32,8 @@
     </tbody>
   </table>
 </div>
-<div class="col-md-3">
-<h5>Aggregate Work</h5>
+<div class="col-md-4">
+<h5>Aggregate Work Hours</h5>
 <table class="table table-hover">
     <thead>
       <tr>
