--- a/timetracker/templates/base.html
+++ b/timetracker/templates/base.html
@@ -13,7 +13,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <title>{% block title %}User test{% endblock %}</title>
+    <title>{% block title %}Time Tracker{% endblock %}</title>
 </head>
 
 <body>
