--- a/timetracker/templates/home.html
+++ b/timetracker/templates/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load i18n %}
 <html lang="en">
 
 <head>
@@ -16,10 +17,10 @@
 </head>
 <body>
 
-	<div style="font-size:10em;vertical-align:middle;text-align:center;width:100%;height:100%;padding-top:10%;position:absolute;" class="glyphicon glyphicon-time">
-		<br>
+	<div style="text-align:center;width:100%;height:100%;padding-top:10%;position:absolute;">
+		<span style="font-size:10em;" class="glyphicon glyphicon-time"></span>
+		<br><br>
 		<a href="{% url 'auth_login' %}" class = "btn btn-primary">{% trans "Timetracker Log in" %}</a>
 	</div>
-
 </body>
 </html>
