Initial Analytics Page added

--- a/timetracker/templates/profile.html
+++ b/timetracker/templates/profile.html
@@ -21,6 +21,7 @@
 <a href="{% url 'timetracker:history' %}" class = "btn btn-info">{% trans "My History" %}</a>
 <a href="{% url 'timetracker:timeEntry' %}" class = "btn btn-primary">{% trans "Enter Time" %}</a>
 <a href="{% url 'timetracker:teamHistory' %}" class = "btn btn-info">{% trans "Team History" %}</a>
+<a href="{% url 'timetracker:analysis' %}" class = "btn btn-info">{% trans "Analytics" %}</a>
 </div>
 
 {% endblock %}
